# ComfyUI-Taylor-Attention

./: AGENTS.md  INSTRUCTIONS.md  README.md  __init__.py  flux2_ttr.py  hybrid_attention.py  nodes_taylor_attention.py  pyproject.toml  sweep_utils.py  taylor_attention.py  taylor_sym_features.py  taylor_triton.py
benchmarks/: benchmark_flux_forward.py  benchmark_taylor_attention.py
docs/: LEARNINGS.md
tests/: test_combinations.py  test_flux2_ttr.py  test_hybrid_attention.py  test_sweep_utils.py  test_taylor_attention.py
